--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <title>Twice</title>
   <style>
     header{
-      background: url(img/tzuyu.jpg);
+      background: url(img/DSC_3421_ST.jpg);
       background-size: cover;
       background-position: center;
       min-height: 1000px;
@@ -22,6 +22,10 @@
         min-height: 500px;
       }
     }
+    .section{
+      padding-top: 4vw;
+      padding-bottom: 4vw;
+    }
   </style>
 </head>
 <body>
@@ -30,25 +34,53 @@
   <header>
     <nav class="nav-wrapper transparent">
       <div class="container">
-        <a href="#" class="brand-logo">brand logo</a>
+        <a href="#" class="brand-logo pink-text">brand logo</a>
         <a href="#" class="sidenav-trigger" data-target="mobile-menu">
           <i class="material-icons">menu</i>
         </a>
         <ul class="right hide-on-med-and-down">
-          <li><a href="#">Stuff</a></li>
-          <li><a href="#">More</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#" class="pink-text">Stuff</a></li>
+          <li><a href="#" class="pink-text">More</a></li>
+          <li><a href="#" class="pink-text">Contact</a></li>
         </ul>
         <ul class="sidenav grey lighten-2" id="mobile-menu">
-          <li><a href="#">Stuff</a></li>
-          <li><a href="#">More</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#" class="pink-text">Stuff</a></li>
+          <li><a href="#" class="pink-text">More</a></li>
+          <li><a href="#" class="pink-text">Contact</a></li>
         </ul>
       </div>
     </nav>
   </header>
   <!-- photo / grid -->
-    
+  <section class="container section" id="photos">
+    <div class="row">
+      <div class="col s12 l4">
+          <img src="img/tzuyu.jpg" alt="" class="responsive-img materialboxed">
+      </div>
+      <div class="col s12 l6 offset-l1">
+        <h2 class="indigo-text text-darken-4">Portraits</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col s12 l4 offset-l1 push-l7">
+          <img src="img/mina.webp" alt="" class="responsive-img materialboxed">
+      </div>
+      <div class="col s12 l6 offset-l1 pull-l5 right-align">
+        <h2 class="indigo-text text-darken-4">Cityscapes</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col s12 l4">
+          <img src="img/more&more.jpg" alt="" class="responsive-img materialboxed">
+      </div>
+      <div class="col s12 l6 offset-l1">
+        <h2 class="indigo-text text-darken-4">Nature</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
+      </div>
+    </div>
+  </section>
   <!-- parallax -->
 
   <!-- services / tabs -->
@@ -66,6 +98,7 @@
     $(document).ready(function(){
 
       $('.sidenav').sidenav();
+      $('.materialboxed').materialbox();
 
     });
   </script>
