--- a/index.html
+++ b/index.html
@@ -32,21 +32,22 @@
 
   <!-- navbar -->
   <header>
-    <nav class="nav-wrapper transparent">
+      <!-- nav-wrapper transparent looks cool too! -->
+    <nav class="nav-wrapper">
       <div class="container">
-        <a href="#" class="brand-logo pink-text">brand logo</a>
+        <a href="#" class="brand-logo">brand logo</a>
         <a href="#" class="sidenav-trigger" data-target="mobile-menu">
           <i class="material-icons">menu</i>
         </a>
         <ul class="right hide-on-med-and-down">
-          <li><a href="#" class="pink-text">Stuff</a></li>
-          <li><a href="#" class="pink-text">More</a></li>
-          <li><a href="#" class="pink-text">Contact</a></li>
+          <li><a href="#">Stuff</a></li>
+          <li><a href="#">More</a></li>
+          <li><a href="#">Contact</a></li>
         </ul>
         <ul class="sidenav grey lighten-2" id="mobile-menu">
-          <li><a href="#" class="pink-text">Stuff</a></li>
-          <li><a href="#" class="pink-text">More</a></li>
-          <li><a href="#" class="pink-text">Contact</a></li>
+          <li><a href="#">Stuff</a></li>
+          <li><a href="#">More</a></li>
+          <li><a href="#">Contact</a></li>
         </ul>
       </div>
     </nav>
