added examples of parallax's

--- a/index.html
+++ b/index.html
@@ -83,13 +83,31 @@
     </div>
   </section>
   <!-- parallax -->
-
+  <div class="parallax-container">
+      <div class="parallax">
+          <img src="img/DSC_3421_ST.jpg" alt="twice-parallax" class="responsive-img">
+      </div>
+  </div>
   <!-- services / tabs -->
-
+  <div class="container">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
+  </div>
   <!-- parallax -->
-
+  <div class="parallax-container">
+    <div class="parallax">
+        <img src="img/DSC_3421_ST.jpg" alt="twice-parallax" class="responsive-img">
+    </div>
+</div>
   <!-- contact form -->
-
+  <div class="container">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
+  </div>
   <!-- footer -->
 
   <!-- Compiled and minified JavaScript -->
@@ -100,6 +118,7 @@
 
       $('.sidenav').sidenav();
       $('.materialboxed').materialbox();
+      $('.parallax').parallax();
 
     });
   </script>
