--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <title>Twice</title>
   <style>
     header{
-      background: url(img/DSC_3421_ST.jpg);
+      background: url(img/test2.jpg);
       background-size: cover;
       background-position: center;
       min-height: 1000px;
@@ -32,22 +32,21 @@
 
   <!-- navbar -->
   <header>
-      <!-- nav-wrapper transparent looks cool too! -->
-    <nav class="nav-wrapper">
+    <nav class="nav-wrapper transparent">
       <div class="container">
-        <a href="#" class="brand-logo">brand logo</a>
+        <a href="#" class="brand-logo black-text">brand logo</a>
         <a href="#" class="sidenav-trigger" data-target="mobile-menu">
           <i class="material-icons">menu</i>
         </a>
         <ul class="right hide-on-med-and-down">
-          <li><a href="#">Stuff</a></li>
-          <li><a href="#">More</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#" class="black-text">Stuff</a></li>
+          <li><a href="#" class="black-text">More</a></li>
+          <li><a href="#" class="black-text">Contact</a></li>
         </ul>
         <ul class="sidenav grey lighten-2" id="mobile-menu">
-          <li><a href="#">Stuff</a></li>
-          <li><a href="#">More</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#" class="black-text">Stuff</a></li>
+          <li><a href="#" class="black-text">More</a></li>
+          <li><a href="#" class="black-text">Contact</a></li>
         </ul>
       </div>
     </nav>
@@ -98,7 +97,7 @@
   <!-- parallax -->
   <div class="parallax-container">
     <div class="parallax">
-        <img src="img/DSC_3421_ST.jpg" alt="twice-parallax" class="responsive-img">
+        <img src="img/1.jpg" alt="twice-parallax" class="responsive-img">
     </div>
 </div>
   <!-- contact form -->
