--- a/index.html
+++ b/index.html
@@ -88,12 +88,35 @@
       </div>
   </div>
   <!-- services / tabs -->
-  <div class="container">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
-  </div>
+  <section class="container section" id="services">
+    <div class="row">
+        <div class="col s12 l4">
+            <h2 class="indigo-text text-darken-4">Mustard</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
+        </div>
+        <div class="col s12 l6 offset-l2">
+            <ul class="tabs">
+                <li class="tab col s6">
+                    <a href="#garlic" class="indigo-text text-darken-4">Garlic</a>
+                </li>
+                <li class="tab col s6">
+                    <a href="#mango" class="indigo-text text-darken-4">Mango</a>
+                </li>
+            </ul>
+            <div class="col s12" id="garlic">
+                <p class="flow-text indigo-text text-darken-4"></p>
+                <p>GARLIC GARLIC GARLIC, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
+            </div>
+            <div class="col s12" id="mango">
+                <p class="flow-text indigo-text text-darken-4"></p>
+                <p>MANGO MANGO MANGO, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
+            </div>
+        </div>
+    </div>
+  </section>
   <!-- parallax -->
   <div class="parallax-container">
     <div class="parallax">
@@ -118,6 +141,7 @@
       $('.sidenav').sidenav();
       $('.materialboxed').materialbox();
       $('.parallax').parallax();
+      $('.tabs').tabs();
 
     });
   </script>
