--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
       padding-top: 4vw;
       padding-bottom: 4vw;
     }
+    .tabs .indicator{
+      background-color: #1a237e;
+    }
+    .tabs .tab a:focus, .tabs .tab a:focus.active{
+      background: transparent;
+    }
   </style>
 </head>
 <body>
