add date picker to form

--- a/index.html
+++ b/index.html
@@ -151,6 +151,11 @@
             <textarea id="message" class="materialize-textarea" cols="20" rows="20"></textarea>
             <label for="message">Your Message</label>
           </div>
+          <div class="input-field">
+            <i class="material-icons prefix">date_range</i>
+            <input type="text" id="date" class="datepicker">
+            <label for="date">Choose a date you need me for...</label>
+          </div>
         </form>
       </div>
     </div>
@@ -170,5 +175,6 @@
 
     });
   </script>
+  <!--More datepicker options https://materializecss.com/pickers.html-->
 </body>
 </html>
