--- a/index.html
+++ b/index.html
@@ -172,6 +172,10 @@
       $('.materialboxed').materialbox();
       $('.parallax').parallax();
       $('.tabs').tabs();
+      $('.datepicker').datepicker({
+        disableWeekends: true,
+        yearRange: 1
+      });  
 
     });
   </script>
