added checkbox examples

--- a/index.html
+++ b/index.html
@@ -156,6 +156,21 @@
             <input type="text" id="date" class="datepicker">
             <label for="date">Choose a date you need me for...</label>
           </div>
+          <div class="input-field">
+            <p>Services required:</p>
+            <p>
+              <label>
+                <input type="checkbox">
+                <span>Photography</span>
+              </label>
+            </p>
+            <p>
+              <label>
+                <input type="checkbox">
+                <span>Photo Editing</span>
+              </label>
+            </p>
+          </div>
         </form>
       </div>
     </div>
