add submit button

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <p>
               <label>
                 <input type="checkbox">
-                <span>Photography</span>
+                <span>Gardening</span>
               </label>
             </p>
             <p>
@@ -170,6 +170,9 @@
                 <span>Photo Editing</span>
               </label>
             </p>
+          </div>
+          <div class="input-field center">
+            <button class="btn">Submit</button>
           </div>
         </form>
       </div>
