--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
       $('.materialboxed').materialbox();
       $('.parallax').parallax();
       $('.tabs').tabs();
+      $('.tooltipped').tooltip();
       $('.datepicker').datepicker({
         disableWeekends: true,
         yearRange: 1
