added some spacing. setting up scrollspy

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
           <i class="material-icons">menu</i>
         </a>
         <ul class="right hide-on-med-and-down">
-          <li><a href="#" class="black-text">Stuff</a></li>
-          <li><a href="#" class="black-text">More</a></li>
-          <li><a href="#" class="black-text">Contact</a></li>
+          <li><a href="#stuff" class="black-text">Stuff</a></li>
+          <li><a href="#more" class="black-text">More</a></li>
+          <li><a href="#contact" class="black-text">Contact</a></li>
           <li><a href="#" class="tooltipped btn-floating btn-small pink lighten-4" data-position="bottom" data-tooltip="Instagram"> 
             <i class="fab fa-instagram"></i>
           </a></li>
@@ -59,21 +59,22 @@
           </a></li>
         </ul>
         <ul class="sidenav grey lighten-2" id="mobile-menu">
-          <li><a href="#" class="black-text">Stuff</a></li>
-          <li><a href="#" class="black-text">More</a></li>
-          <li><a href="#" class="black-text">Contact</a></li>
+          <li><a href="#stuff" class="black-text">Stuff</a></li>
+          <li><a href="#more" class="black-text">More</a></li>
+          <li><a href="#contact" class="black-text">Contact</a></li>
         </ul>
       </div>
     </nav>
   </header>
+
   <!-- photo / grid -->
-  <section class="container section" id="photos">
+  <section class="container section" id="stuff">
     <div class="row">
       <div class="col s12 l4">
           <img src="img/tzuyu.jpg" alt="" class="responsive-img materialboxed">
       </div>
       <div class="col s12 l6 offset-l1">
-        <h2 class="indigo-text text-darken-4">Portraits</h2>
+        <h2 class="indigo-text text-darken-4">Stuff</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
       </div>
     </div>
@@ -102,11 +103,12 @@
           <img src="img/DSC_3421_ST.jpg" alt="twice-parallax" class="responsive-img">
       </div>
   </div>
+  
   <!-- services / tabs -->
-  <section class="container section" id="services">
+  <section class="container section" id="more">
     <div class="row">
         <div class="col s12 l4">
-            <h2 class="indigo-text text-darken-4">Mustard</h2>
+            <h2 class="indigo-text text-darken-4">More</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
         </div>
@@ -132,12 +134,14 @@
         </div>
     </div>
   </section>
+
   <!-- parallax -->
   <div class="parallax-container">
     <div class="parallax">
         <img src="img/1.jpg" alt="twice-parallax" class="responsive-img">
     </div>
 </div>
+
   <!-- contact form -->
   <section class="section container" id="contact">
     <div class="row">
@@ -187,6 +191,7 @@
       </div>
     </div>
   </section>
+
   <!-- footer -->
   <footer class="page-footer grey darken-3">
     <div class="container">
@@ -211,6 +216,7 @@
       <div class="container center-align">&copy; 2020 TWICE-ONCE</div>
     </div>
   </footer>
+
   <!-- Compiled and minified JavaScript -->
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
