--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
           <img src="img/DSC_3421_ST.jpg" alt="twice-parallax" class="responsive-img">
       </div>
   </div>
-  
+
   <!-- services / tabs -->
-  <section class="container section" id="more">
+  <section class="container section scrollspy" id="more">
     <div class="row">
         <div class="col s12 l4">
             <h2 class="indigo-text text-darken-4">More</h2>
@@ -143,7 +143,7 @@
 </div>
 
   <!-- contact form -->
-  <section class="section container" id="contact">
+  <section class="section container scrollspy" id="contact">
     <div class="row">
       <div class="col s12 l5">
         <h2 class="indigo-text text-darken-4">Get in Touch</h2>
@@ -193,7 +193,7 @@
   </section>
 
   <!-- footer -->
-  <footer class="page-footer grey darken-3">
+  <footer class="page-footer grey darken-3 scrollspy">
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
@@ -228,6 +228,7 @@
       $('.parallax').parallax();
       $('.tabs').tabs();
       $('.tooltipped').tooltip();
+      $('.scrollspy').scrollSpy();
       $('.datepicker').datepicker({
         disableWeekends: true,
         yearRange: 1
