--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <title>Twice</title>
   <style>
     header{
-      background: url(img/test2.jpg);
+      background: url(img/backgroundWhite.jpg);
       background-size: cover;
       background-position: center;
       min-height: 1000px;
@@ -71,7 +71,7 @@
   <section class="container section" id="stuff">
     <div class="row">
       <div class="col s12 l4">
-          <img src="img/tzuyu.jpg" alt="" class="responsive-img materialboxed">
+          <img src="img/img2.jpg" alt="" class="responsive-img materialboxed">
       </div>
       <div class="col s12 l6 offset-l1">
         <h2 class="indigo-text text-darken-4">Stuff</h2>
@@ -80,7 +80,7 @@
     </div>
     <div class="row">
       <div class="col s12 l4 offset-l1 push-l7">
-          <img src="img/mina.webp" alt="" class="responsive-img materialboxed">
+          <img src="img/img1.jpg" alt="" class="responsive-img materialboxed">
       </div>
       <div class="col s12 l6 offset-l1 pull-l5 right-align">
         <h2 class="indigo-text text-darken-4">Cityscapes</h2>
@@ -89,7 +89,7 @@
     </div>
     <div class="row">
       <div class="col s12 l4">
-          <img src="img/more&more.jpg" alt="" class="responsive-img materialboxed">
+          <img src="img/img3.png" alt="" class="responsive-img materialboxed">
       </div>
       <div class="col s12 l6 offset-l1">
         <h2 class="indigo-text text-darken-4">Nature</h2>
@@ -100,7 +100,7 @@
   <!-- parallax -->
   <div class="parallax-container">
       <div class="parallax">
-          <img src="img/DSC_3421_ST.jpg" alt="twice-parallax" class="responsive-img">
+          <img src="img/parallax3.jpg" alt="twice-parallax" class="responsive-img">
       </div>
   </div>
 
@@ -138,7 +138,7 @@
   <!-- parallax -->
   <div class="parallax-container">
     <div class="parallax">
-        <img src="img/1.jpg" alt="twice-parallax" class="responsive-img">
+        <img src="img/parallax4.jpg" alt="twice-parallax" class="responsive-img">
     </div>
 </div>
 
