changed imgs again

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <title>Twice</title>
   <style>
     header{
-      background: url(img/backgroundWhite.jpg);
+      background: url(img/backgroundPlain.jpg);
       background-size: cover;
       background-position: center;
       min-height: 1000px;
