--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       padding-bottom: 4vw;
     }
     .tabs .indicator{
-      background-color: #1a237e;
+      background-color: #673ab7;
     }
     .tabs .tab a:focus, .tabs .tab a:focus.active{
       background: transparent;
@@ -74,7 +74,7 @@
           <img src="img/img4.jpg" alt="" class="responsive-img materialboxed">
       </div>
       <div class="col s12 l6 offset-l1">
-        <h2 class="indigo-text text-darken-4">Stuff</h2>
+        <h2 class="pink-text text-lighten-3">Stuff</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
       </div>
     </div>
@@ -83,7 +83,7 @@
           <img src="img/img5.jpg" alt="" class="responsive-img materialboxed">
       </div>
       <div class="col s12 l6 offset-l1 pull-l5 right-align">
-        <h2 class="indigo-text text-darken-4">Cityscapes</h2>
+        <h2 class="pink-text text-lighten-3">Cityscapes</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
       </div>
     </div>
@@ -92,7 +92,7 @@
           <img src="img/img6.jpg" alt="" class="responsive-img materialboxed">
       </div>
       <div class="col s12 l6 offset-l1">
-        <h2 class="indigo-text text-darken-4">Nature</h2>
+        <h2 class="pink-text text-lighten-3">Nature</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
       </div>
     </div>
@@ -108,17 +108,17 @@
   <section class="container section scrollspy" id="more">
     <div class="row">
         <div class="col s12 l4">
-            <h2 class="indigo-text text-darken-4">More</h2>
+            <h2 class="deep-purple-text">More</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
         </div>
         <div class="col s12 l6 offset-l2">
             <ul class="tabs">
                 <li class="tab col s6">
-                    <a href="#garlic" class="indigo-text text-darken-4">Garlic</a>
+                    <a href="#garlic" class="deep-purple-text text-lighten-1">Garlic</a>
                 </li>
                 <li class="tab col s6">
-                    <a href="#mango" class="indigo-text text-darken-4">Mango</a>
+                    <a href="#mango" class="deep-purple-text text-lighten-1">Mango</a>
                 </li>
             </ul>
             <div class="col s12" id="garlic">
@@ -146,7 +146,7 @@
   <section class="section container scrollspy" id="contact">
     <div class="row">
       <div class="col s12 l5">
-        <h2 class="indigo-text text-darken-4">Get in Touch</h2>
+        <h2 class="green-text text-lighten-2">Get in Touch</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
         <p>Mauris dolor augue, vulputate in pharetra ac, facilisis nec libero. Fusce condimentum gravida urna, vitae scelerisque erat ornare nec.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
@@ -155,17 +155,17 @@
       <div class="col s12 l5 offset-l2">
         <form>
           <div class="input-field">
-            <i class="material-icons prefix">email</i>
+            <i class="material-icons prefix green-text text-lighten-2">email</i>
             <input type="email" id="email">
             <label for="email">Your Email</label>
           </div>
           <div class="input-field">
-            <i class="material-icons prefix">message</i>
+            <i class="material-icons prefix green-text text-lighten-2">message</i>
             <textarea id="message" class="materialize-textarea" cols="20" rows="20"></textarea>
             <label for="message">Your Message</label>
           </div>
           <div class="input-field">
-            <i class="material-icons prefix">date_range</i>
+            <i class="material-icons prefix green-text text-lighten-2">date_range</i>
             <input type="text" id="date" class="datepicker">
             <label for="date">Choose a date you need me for...</label>
           </div>
@@ -173,7 +173,7 @@
             <p>Services required:</p>
             <p>
               <label>
-                <input type="checkbox">
+                <input type="checkbox" class="green lighten-2">
                 <span>Gardening</span>
               </label>
             </p>
@@ -184,8 +184,8 @@
               </label>
             </p>
           </div>
-          <div class="input-field center">
-            <button class="btn">Submit</button>
+          <div class="input-field center ">
+            <button class="btn green lighten-2">Submit</button>
           </div>
         </form>
       </div>
