--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         min-height: 500px;
       }
     }
+    .parallax-container {
+      height: 650px;
+    }
     .section{
       padding-top: 4vw;
       padding-bottom: 4vw;
