--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
     .tabs .tab a:focus, .tabs .tab a:focus.active {
       background: transparent;
     }
+    .picker { 
+      outline: none; 
+    }
     .datepicker-date-display {
       background-color: #81c784;
     }
@@ -52,6 +55,13 @@
       border-bottom:2px solid #81c784;
       border-right:2px solid #81c784;
       background:transparent;
+    }
+    input:focus {
+      border-bottom: 1px solid #66bb6a !important;
+      box-shadow: 0 1px 0 0 #66bb6a !important;
+    }
+    label.active {
+      color: #66bb6a !important;
     }
   </style>
 </head>
@@ -182,7 +192,7 @@
           </div>
           <div class="input-field">
             <i class="material-icons prefix green-text text-lighten-2">message</i>
-            <textarea id="message" class="materialize-textarea" cols="20" rows="20"></textarea>
+            <input id="message" type="text" cols="20" rows="20"></input>
             <label for="message">Your Message</label>
           </div>
           <div class="input-field">
